--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,18 @@ DATABASE_URL=postgresql://user:password@localhost:5432/mementum
 # Logging & Debugging
 LOG_LEVEL=INFO
 DEBUG_MODE=true
+
+# Blockchain Configuration
+BLOCKCHAIN_PROVIDER_URL=https://solana-rpc-url
+CONTRACT_ADDRESS=your_contract_address
+WALLET_ADDRESS=your_wallet_address
+PRIVATE_KEY=your_private_key
+RECIPIENT_ADDRESS=recipient_wallet_address
+
+# Testnet Configuration
+TESTNET_PROVIDER_URL=https://testnet-rpc-url
+TESTNET_CONTRACT_ADDRESS=testnet_contract_address
+TEST_WALLET_ADDRESS=test_wallet_address
+TEST_PRIVATE_KEY=test_private_key
+TEST_RECIPIENT_ADDRESS=test_recipient_address
+CONTRACT_ABI=[...]  # JSON array of ABI
